--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>TTS Server App</title>
         <link rel="stylesheet" href="/static/css/bootstrap.min.css">
         <link rel="stylesheet" href="/static/css/custom.css">
@@ -10,20 +11,18 @@
             <div class="card">
                 <div class="card-header"><h3>TTS Server App</h3></div>
                 <div class="card-body">
-                    <form>
+                    <form id="appForm">
                         <div class="form-group">
                             <label>Select Voice</label>
-                            <select class="form-control">
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
+                            <select id="voiceInput" class="form-control">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
                             </select>
                         </div>
                         <div class="form-group">
                             <label>Write some text</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            <textarea id="textInput" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary">Speak</button>
                     </form>
@@ -34,5 +33,6 @@
         <!-- Scripts -->
         <script src="/static/js/jquery-3.3.1.min.js"></script>
         <script src="/static/js/bootstrap.min.js"></script>
+        <script src="/static/js/custom.js"></script>
     </body>
 </html>
