added basic features

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>TTS Server App</title>
         <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/static/css/custom.css">
+        <link rel="stylesheet" href="/static/css/app.css">
     </head>
     <body>
         <div class="app-container">
@@ -14,11 +14,7 @@
                     <form id="appForm">
                         <div class="form-group">
                             <label>Select Voice</label>
-                            <select id="voiceInput" class="form-control">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>
+                            <select id="voiceInput" class="form-control"></select>
                         </div>
                         <div class="form-group">
                             <label>Write some text</label>
@@ -33,6 +29,6 @@
         <!-- Scripts -->
         <script src="/static/js/jquery-3.3.1.min.js"></script>
         <script src="/static/js/bootstrap.min.js"></script>
-        <script src="/static/js/custom.js"></script>
+        <script src="/static/js/app.js"></script>
     </body>
 </html>
