--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,10 @@
                         </div>
                         <div class="form-group">
                             <label>Write some text</label>
-                            <textarea id="textInput" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            <textarea id="textInput" class="form-control" rows="10" placeholder="Enter some text"></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary">Speak</button>
+                        <button id="stopReading" type="button" class="btn btn-danger">Stop</button>
                     </form>
                 </div>
             </div>
