--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/static/css/app.css">
     </head>
     <body>
-        <div class="app-container">
+        <div class="container">
             <div class="card">
                 <div class="card-header"><h3>TTS Server App</h3></div>
                 <div class="card-body">
@@ -28,7 +28,7 @@
         </div>
         
         <!-- Scripts -->
-        <script src="/static/js/jquery-3.3.1.min.js"></script>
+        <script src="/static/js/jquery-3.5.0.min.js"></script>
         <script src="/static/js/bootstrap.min.js"></script>
         <script src="/static/js/app.js"></script>
     </body>
